Fixing a lot of stuff, refactoring, and changing the functionality to use the Color Picker Wheel instead of three sliders.

--- a/app/src/main/res/layout/activity_led_control.xml
+++ b/app/src/main/res/layout/activity_led_control.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_get_bluetooth_devices"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,89 +10,43 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.led.led.ledControl">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="CRVENA"
-        android:id="@+id/textBarCrvena"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <SeekBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:max="255"
-        android:progress="0"
-        android:layout_marginTop="23dp"
-        android:id="@+id/seekBarCrvena"
-        android:layout_below="@+id/textBarCrvena"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ZELENA"
-        android:id="@+id/textBarZelena"
-        android:layout_marginTop="24dp"
-        android:layout_below="@+id/seekBarCrvena"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <SeekBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:max="255"
-        android:progress="0"
-        android:id="@+id/seekBarZelena"
-        android:layout_below="@+id/textBarZelena"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="25dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="PLAVA"
-        android:id="@+id/textBarPlava"
-        android:layout_marginTop="24dp"
-        android:layout_below="@+id/seekBarZelena"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <SeekBar
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:max="255"
-        android:progress="0"
-        android:layout_below="@+id/textBarPlava"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="25dp"
-        android:id="@+id/seekBarPlava"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+    <com.skydoves.colorpickerview.ColorPickerView
+        android:id="@+id/colorPickerView"
+        android:layout_width="765dp"
+        android:layout_height="761dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        app:palette="@drawable/palette"
+        app:selector="@drawable/wheel" />
 
     <Button
-        android:text="Ugasi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/Ugasi_Button"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="173dp"
+        android:layout_height="88dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="60dp" />
+        android:layout_alignRight="@id/colorPickerView"
+        android:background="@android:color/holo_red_light"
+        android:text="Turn Off"
+        android:textSize="24sp" />
 
     <Button
-        android:text="Upali"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/Upali_Button"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="173dp"
+        android:layout_height="88dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="60dp" />
+        android:layout_alignLeft="@+id/colorPickerView"
+        android:background="@android:color/holo_blue_light"
+        android:text="Turn On"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/rgbValues"
+        android:layout_width="236dp"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/colorPickerView"
+        android:layout_toEndOf="@+id/colorPickerView"
+        android:text="" />
 
 </RelativeLayout>
